--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         header {
-            background-image: url('ruta-a-tu-imagen.jpg');
+            background-image: url('encabezado.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
